# rust-newsletter-API

./: Cargo.toml
.github/workflows/: audit-on-push.yml  general.yml  scheduled-audit.yml
cargo/: config.toml
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
